# notesy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
notesy_core/: CMakeLists.txt  Cargo.toml
notesy_core/include/notesy_core/: core.h
notesy_core/src/: lib.rs
src/: main.c  thread_comm.c  thread_comm.h
